# arm-assembler

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: asl.lalrpop  asl.rs  ast.rs  decode.rs  encode.rs  lib.rs  mnemonic.rs  opcode.rs  register.rs
src/asl/: arch_decode.rs  ast.rs  lexer.rs  mod.rs  parser.rs
src/codegen/: mod.rs
