[package]
name = "arm-assembler"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.7"
regex = "1"
lalrpop = "0.19.7"



[lib]
path = "src/lib.rs"
name = "arm_assembler"

[build-dependencies]
lalrpop = "0.19.7"
